DSC-1512 fix export menu z-index

--- a/src/app/shared/search/item-export/item-export-modal-launcher/item-export-modal-launcher.component.scss
+++ b/src/app/shared/search/item-export/item-export-modal-launcher/item-export-modal-launcher.component.scss
@@ -1,3 +1,7 @@
 :host {
   display: none;
 }
+
+.dropdown-container {
+  z-index: 1025;
+}
